Prefixes for GlolbalConfiguration parameters were fixed.